--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2464,11 +2464,11 @@
 
 	#header {
 		background-color: #1f1815;
-		background-attachment: scroll,								fixed;
-		background-image: url("images/overlay.png"), url("../../images/bg.jpg");
-		background-position: top left,							top left;
-		background-repeat: repeat,								no-repeat;
-		background-size: auto,								auto 100%;
+		background-attachment: fixed;
+		background-image: url("../../images/bg.jpg");
+		background-position: top left;
+		background-repeat: no-repeat;
+		background-size: auto 100%;
 		color: rgba(255, 255, 255, 0.5);
 		height: 100%;
 		left: 0;
@@ -2477,6 +2477,8 @@
 		text-align: right;
 		top: 0;
 		width: 35%;
+		-webkit-filter: sepia(10%);
+		filter: sepia(10%);
 	}
 
 		#header strong, #header b {
@@ -2488,12 +2490,17 @@
 		}
 
 		#header h1 {
-			color: rgba(255, 255, 255, 0.65);
+			color: rgba(255, 255, 255, 0.7);
 			font-size: 1.35em;
 			line-height: 1.75em;
 			margin: 0;
+		}	
+		
+		#header h1 a:hover{
+			color: #ffffff!important;
 		}
-
+ }  
+		
 		#header .image.avatar {
 			margin: 0 0 1em 0;
 			width: 6.25em;
@@ -2515,11 +2522,11 @@
 		}
 
 			#footer .icons a {
-				color: rgba(255, 255, 255, 0.4);
+				color: rgba(255, 255, 255, 0.6);
 			}
 
 		#footer .copyright {
-			color: rgba(255, 255, 255, 0.4);
+			color: rgba(255, 255, 255, 0.4x);
 			font-size: 0.8em;
 			list-style: none;
 			margin: 1em 0 0 0;
@@ -2785,7 +2792,7 @@
 				font-size: 1em;
 				height: 1.75em;
 				left: 50%;
-				line-height: 1.75em;
+				line-height: 1.75em;g
 				margin: -0.875em 0 0 -0.875em;
 				position: absolute;
 				top: 50%;
